--- a/Bootstrap/Tindog/index.html
+++ b/Bootstrap/Tindog/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
         <title>TinDog</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +34,10 @@
             integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5"
             crossorigin="anonymous"
         />
-        <script src="https://kit.fontawesome.com/cfb8645133.js" crossorigin="anonymous"></script>
+        <script
+            src="https://kit.fontawesome.com/cfb8645133.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
 
     <body>
@@ -50,7 +57,10 @@
                     >
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div
+                        class="collapse navbar-collapse"
+                        id="navbarSupportedContent"
+                    >
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="">Contact</a>
@@ -69,15 +79,25 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <h1>Meet new and interesting dogs nearby.</h1>
-                        <button class="btn btn-dark btn-lg download-button" type="button">
+                        <button
+                            class="btn btn-dark btn-lg download-button"
+                            type="button"
+                        >
                             <i class="fa-brands fa-apple"></i> Download
                         </button>
-                        <button class="btn btn-outline-light btn-lg download-button" type="button">
+                        <button
+                            class="btn btn-outline-light btn-lg download-button"
+                            type="button"
+                        >
                             <i class="fa-brands fa-google-play"></i> Download
                         </button>
                     </div>
                     <div class="col-lg-6">
-                        <img class="title-image" src="images/iphone6.png" alt="iphone-mockup" />
+                        <img
+                            class="title-image"
+                            src="images/iphone6.png"
+                            alt="iphone-mockup"
+                        />
                     </div>
                 </div>
             </div>
@@ -101,7 +121,9 @@
                     <div class="col-lg-4 feature-card">
                         <i class="fa-solid fa-heart fa-4x icon"></i>
                         <h3>Guaranteed to work.</h3>
-                        <p>Find the love of your dog's life or your money back.</p>
+                        <p>
+                            Find the love of your dog's life or your money back.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -110,12 +132,16 @@
         <!-- Testimonials -->
 
         <section id="testimonials">
-            <div id="testimonialsCarousel" class="carousel slide" data-ride="false">
+            <div
+                id="testimonialsCarousel"
+                class="carousel slide"
+                data-ride="false"
+            >
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <h2>
-                            I no longer have to sniff other dogs for love. I've found the hottest
-                            Corgi on TinDog. Woof.
+                            I no longer have to sniff other dogs for love. I've
+                            found the hottest Corgi on TinDog. Woof.
                         </h2>
                         <img
                             class="testimonials-image"
@@ -126,8 +152,8 @@
                     </div>
                     <div class="carousel-item">
                         <h2 class="testimonial-text">
-                            My dog used to be so lonely, but with TinDog's help, they've found the
-                            love of their life. I think.
+                            My dog used to be so lonely, but with TinDog's help,
+                            they've found the love of their life. I think.
                         </h2>
                         <img
                             class="testimonials-image"
@@ -143,7 +169,10 @@
                     role="button"
                     data-slide="prev"
                 >
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span
+                        class="carousel-control-prev-icon"
+                        aria-hidden="true"
+                    ></span>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a
@@ -152,7 +181,10 @@
                     role="button"
                     data-slide="next"
                 >
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span
+                        class="carousel-control-next-icon"
+                        aria-hidden="true"
+                    ></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
@@ -163,8 +195,16 @@
         <section id="press">
             <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
             <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
-            <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
-            <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
+            <img
+                class="press-logo"
+                src="images/bizinsider.png"
+                alt="biz-insider-logo"
+            />
+            <img
+                class="press-logo"
+                src="images/mashable.png"
+                alt="mashable-logo"
+            />
         </section>
 
         <!-- Pricing -->
@@ -173,27 +213,60 @@
             <h2>A Plan for Every Dog's Needs</h2>
             <p>Simple and affordable price plans for your and your dog.</p>
 
-            <h3>Chihuahua</h3>
-            <h2>Free</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
-
-            <h3>Labrador</h3>
-            <h2>$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
-
-            <h3>Mastiff</h3>
-            <h2>$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
+            <div class="row">
+                <div class="pricing-column col-md-6 col-lg-4">
+                    <div class="card ">
+                        <div class="card-header"><h3>Chihuahua</h3></div>
+                        <div class="card-body">
+                            <h2>Free</h2>
+                            <p>5 Matches Per Day</p>
+                            <p>10 Messages Per Day</p>
+                            <p>Unlimited App Usage</p>
+                            <button
+                                class="btn btn-outline-dark btn-lg btn-block"
+                                type="button"
+                            >
+                                Sign Up
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="pricing-column col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-header"><h3>Labrador</h3></div>
+                        <div class="card-body">
+                            <h2>$49 / mo</h2>
+                            <p>Unlimited Matches</p>
+                            <p>Unlimited Messages</p>
+                            <p>Unlimited App Usage</p>
+                            <button
+                                class="btn btn-dark btn-lg btn-block"
+                                type="button"
+                            >
+                                Sign Up
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="pricing-column col-lg-4">
+                    <div class="card">
+                        <div class="card-header"><h3>Mastiff</h3></div>
+                        <div class="card-body">
+                            <h2>$99 / mo</h2>
+                            <p>Pirority Listing</p>
+                            <p>Unlimited Matches</p>
+                            <p>Unlimited Messages</p>
+                            <p>Unlimited App Usage</p>
+                            <button
+                                class="btn btn-dark btn-lg btn-block"
+                                type="button"
+                            >
+                                Sign Up
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Call to Action -->
