--- a/Bootstrap/Tindog/index.html
+++ b/Bootstrap/Tindog/index.html
@@ -2,10 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>TinDog</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,10 +31,7 @@
             integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5"
             crossorigin="anonymous"
         />
-        <script
-            src="https://kit.fontawesome.com/cfb8645133.js"
-            crossorigin="anonymous"
-        ></script>
+        <script src="https://kit.fontawesome.com/cfb8645133.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -57,19 +51,16 @@
                     >
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div
-                        class="collapse navbar-collapse"
-                        id="navbarSupportedContent"
-                    >
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="">Contact</a>
+                                <a class="nav-link" href="#footer">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Pricing</a>
+                                <a class="nav-link" href="#pricing">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Download</a>
+                                <a class="nav-link" href="#cta">Download</a>
                             </li>
                         </ul>
                     </div>
@@ -79,25 +70,15 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <h1>Meet new and interesting dogs nearby.</h1>
-                        <button
-                            class="btn btn-dark btn-lg download-button"
-                            type="button"
-                        >
+                        <button class="btn btn-dark btn-lg download-button" type="button">
                             <i class="fa-brands fa-apple"></i> Download
                         </button>
-                        <button
-                            class="btn btn-outline-light btn-lg download-button"
-                            type="button"
-                        >
+                        <button class="btn btn-outline-light btn-lg download-button" type="button">
                             <i class="fa-brands fa-google-play"></i> Download
                         </button>
                     </div>
                     <div class="col-lg-6">
-                        <img
-                            class="title-image"
-                            src="images/iphone6.png"
-                            alt="iphone-mockup"
-                        />
+                        <img class="title-image" src="images/iphone6.png" alt="iphone-mockup" />
                     </div>
                 </div>
             </div>
@@ -121,9 +102,7 @@
                     <div class="col-lg-4 feature-card">
                         <i class="fa-solid fa-heart fa-4x icon"></i>
                         <h3>Guaranteed to work.</h3>
-                        <p>
-                            Find the love of your dog's life or your money back.
-                        </p>
+                        <p>Find the love of your dog's life or your money back.</p>
                     </div>
                 </div>
             </div>
@@ -132,16 +111,12 @@
         <!-- Testimonials -->
 
         <section id="testimonials">
-            <div
-                id="testimonialsCarousel"
-                class="carousel slide"
-                data-ride="false"
-            >
+            <div id="testimonialsCarousel" class="carousel slide" data-ride="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <h2>
-                            I no longer have to sniff other dogs for love. I've
-                            found the hottest Corgi on TinDog. Woof.
+                            I no longer have to sniff other dogs for love. I've found the hottest
+                            Corgi on TinDog. Woof.
                         </h2>
                         <img
                             class="testimonials-image"
@@ -152,8 +127,8 @@
                     </div>
                     <div class="carousel-item">
                         <h2 class="testimonial-text">
-                            My dog used to be so lonely, but with TinDog's help,
-                            they've found the love of their life. I think.
+                            My dog used to be so lonely, but with TinDog's help, they've found the
+                            love of their life. I think.
                         </h2>
                         <img
                             class="testimonials-image"
@@ -169,10 +144,7 @@
                     role="button"
                     data-slide="prev"
                 >
-                    <span
-                        class="carousel-control-prev-icon"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a
@@ -181,10 +153,7 @@
                     role="button"
                     data-slide="next"
                 >
-                    <span
-                        class="carousel-control-next-icon"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
@@ -195,16 +164,8 @@
         <section id="press">
             <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
             <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
-            <img
-                class="press-logo"
-                src="images/bizinsider.png"
-                alt="biz-insider-logo"
-            />
-            <img
-                class="press-logo"
-                src="images/mashable.png"
-                alt="mashable-logo"
-            />
+            <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
+            <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
         </section>
 
         <!-- Pricing -->
@@ -214,17 +175,14 @@
             <p>Simple and affordable price plans for your and your dog.</p>
             <div class="row">
                 <div class="pricing-column col-md-6 col-lg-4">
-                    <div class="card ">
+                    <div class="card">
                         <div class="card-header"><h3>Chihuahua</h3></div>
                         <div class="card-body">
                             <h2>Free</h2>
                             <p>5 Matches Per Day</p>
                             <p>10 Messages Per Day</p>
                             <p>Unlimited App Usage</p>
-                            <button
-                                class="btn btn-outline-dark btn-lg btn-block"
-                                type="button"
-                            >
+                            <button class="btn btn-outline-dark btn-lg btn-block" type="button">
                                 Sign Up
                             </button>
                         </div>
@@ -238,10 +196,7 @@
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
-                            <button
-                                class="btn btn-dark btn-lg btn-block"
-                                type="button"
-                            >
+                            <button class="btn btn-dark btn-lg btn-block" type="button">
                                 Sign Up
                             </button>
                         </div>
@@ -256,10 +211,7 @@
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
-                            <button
-                                class="btn btn-dark btn-lg btn-block"
-                                type="button"
-                            >
+                            <button class="btn btn-dark btn-lg btn-block" type="button">
                                 Sign Up
                             </button>
                         </div>
@@ -271,14 +223,22 @@
         <!-- Call to Action -->
 
         <section id="cta">
-            <h3>Find the True Love of Your Dog's Life Today.</h3>
-            <button type="button">Download</button>
-            <button type="button">Download</button>
+            <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+            <button class="download-button btn btn-lg btn-dark" type="button">
+                <i class="fa-brands fa-apple"></i> Download
+            </button>
+            <button class="download-button btn btn-lg btn-light" type="button">
+                <i class="fa-brands fa-google-play"></i> Download
+            </button>
         </section>
 
         <!-- Footer -->
 
         <footer id="footer">
+            <i class="fa-brands fa-twitter social-icon"></i>
+            <i class="fa-brands fa-facebook-f social-icon"></i>
+            <i class="fa-brands fa-instagram social-icon"></i>
+            <i class="fa-solid fa-envelope social-icon"></i>
             <p>© Copyright 2018 TinDog</p>
         </footer>
         <script
