--- a/Bootstrap/Tindog/index.html
+++ b/Bootstrap/Tindog/index.html
@@ -69,7 +69,7 @@
                 <!-- Title -->
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1>Meet new and interesting dogs nearby.</h1>
+                        <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
                         <button class="btn btn-dark btn-lg download-button" type="button">
                             <i class="fa-brands fa-apple"></i> Download
                         </button>
@@ -87,21 +87,21 @@
         <!-- Features -->
 
         <section id="features">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4 feature-card">
                         <i class="fa-solid fa-circle-check fa-4x icon"></i>
-                        <h3>Easy to use.</h3>
+                        <h3 class="feature-title">Easy to use.</h3>
                         <p>So easy to use, even your dog could do it.</p>
                     </div>
                     <div class="col-lg-4 feature-card">
                         <i class="fa-solid fa-bullseye fa-4x icon"></i>
-                        <h3>Elite Clientele</h3>
+                        <h3 class="feature-title">Elite Clientele</h3>
                         <p>We have all the dogs, the greatest dogs.</p>
                     </div>
                     <div class="col-lg-4 feature-card">
                         <i class="fa-solid fa-heart fa-4x icon"></i>
-                        <h3>Guaranteed to work.</h3>
+                        <h3 class="feature-title">Guaranteed to work.</h3>
                         <p>Find the love of your dog's life or your money back.</p>
                     </div>
                 </div>
@@ -113,8 +113,8 @@
         <section id="testimonials">
             <div id="testimonialsCarousel" class="carousel slide" data-ride="false">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <h2>
+                    <div class="carousel-item active container-fluid">
+                        <h2 class="testimonial-text">
                             I no longer have to sniff other dogs for love. I've found the hottest
                             Corgi on TinDog. Woof.
                         </h2>
@@ -125,7 +125,7 @@
                         />
                         <em>Pebbles, New York</em>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item container-fluid">
                         <h2 class="testimonial-text">
                             My dog used to be so lonely, but with TinDog's help, they've found the
                             love of their life. I think.
@@ -171,14 +171,14 @@
         <!-- Pricing -->
 
         <section id="pricing">
-            <h2>A Plan for Every Dog's Needs</h2>
+            <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
             <p>Simple and affordable price plans for your and your dog.</p>
             <div class="row">
                 <div class="pricing-column col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-header"><h3>Chihuahua</h3></div>
                         <div class="card-body">
-                            <h2>Free</h2>
+                            <h2 class="price-text">Free</h2>
                             <p>5 Matches Per Day</p>
                             <p>10 Messages Per Day</p>
                             <p>Unlimited App Usage</p>
@@ -192,7 +192,7 @@
                     <div class="card">
                         <div class="card-header"><h3>Labrador</h3></div>
                         <div class="card-body">
-                            <h2>$49 / mo</h2>
+                            <h2 class="price-text">$49 / mo</h2>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
@@ -206,7 +206,7 @@
                     <div class="card">
                         <div class="card-header"><h3>Mastiff</h3></div>
                         <div class="card-body">
-                            <h2>$99 / mo</h2>
+                            <h2 class="price-text">$99 / mo</h2>
                             <p>Pirority Listing</p>
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
@@ -223,23 +223,27 @@
         <!-- Call to Action -->
 
         <section id="cta">
-            <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
-            <button class="download-button btn btn-lg btn-dark" type="button">
-                <i class="fa-brands fa-apple"></i> Download
-            </button>
-            <button class="download-button btn btn-lg btn-light" type="button">
-                <i class="fa-brands fa-google-play"></i> Download
-            </button>
+            <div class="container-fluid">
+                <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+                <button class="download-button btn btn-lg btn-dark" type="button">
+                    <i class="fa-brands fa-apple"></i> Download
+                </button>
+                <button class="download-button btn btn-lg btn-light" type="button">
+                    <i class="fa-brands fa-google-play"></i> Download
+                </button>
+            </div>
         </section>
 
         <!-- Footer -->
 
         <footer id="footer">
-            <i class="fa-brands fa-twitter social-icon"></i>
-            <i class="fa-brands fa-facebook-f social-icon"></i>
-            <i class="fa-brands fa-instagram social-icon"></i>
-            <i class="fa-solid fa-envelope social-icon"></i>
-            <p>© Copyright 2018 TinDog</p>
+            <div class="container-fluid">
+                <i class="fa-brands fa-twitter social-icon"></i>
+                <i class="fa-brands fa-facebook-f social-icon"></i>
+                <i class="fa-brands fa-instagram social-icon"></i>
+                <i class="fa-solid fa-envelope social-icon"></i>
+                <p>© Copyright 2018 TinDog</p>
+            </div>
         </footer>
         <script
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
