--- a/Bootstrap/Tindog/index.html
+++ b/Bootstrap/Tindog/index.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
         <title>TinDog</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,11 +34,14 @@
             integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5"
             crossorigin="anonymous"
         />
-        <script src="https://kit.fontawesome.com/cfb8645133.js" crossorigin="anonymous"></script>
+        <script
+            src="https://kit.fontawesome.com/cfb8645133.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
 
     <body>
-        <section id="title">
+        <section class="colored-section" id="title">
             <!-- Nav Bar -->
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-dark">
@@ -51,7 +57,10 @@
                     >
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div
+                        class="collapse navbar-collapse"
+                        id="navbarSupportedContent"
+                    >
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="#footer">Contact</a>
@@ -69,16 +78,28 @@
                 <!-- Title -->
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
-                        <button class="btn btn-dark btn-lg download-button" type="button">
+                        <h1 class="big-heading">
+                            Meet new and interesting dogs nearby.
+                        </h1>
+                        <button
+                            class="btn btn-dark btn-lg download-button"
+                            type="button"
+                        >
                             <i class="fa-brands fa-apple"></i> Download
                         </button>
-                        <button class="btn btn-outline-light btn-lg download-button" type="button">
+                        <button
+                            class="btn btn-outline-light btn-lg download-button"
+                            type="button"
+                        >
                             <i class="fa-brands fa-google-play"></i> Download
                         </button>
                     </div>
                     <div class="col-lg-6">
-                        <img class="title-image" src="images/iphone6.png" alt="iphone-mockup" />
+                        <img
+                            class="title-image"
+                            src="images/iphone6.png"
+                            alt="iphone-mockup"
+                        />
                     </div>
                 </div>
             </div>
@@ -86,7 +107,7 @@
 
         <!-- Features -->
 
-        <section id="features">
+        <section class="white-section" id="features">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4 feature-card">
@@ -102,7 +123,9 @@
                     <div class="col-lg-4 feature-card">
                         <i class="fa-solid fa-heart fa-4x icon"></i>
                         <h3 class="feature-title">Guaranteed to work.</h3>
-                        <p>Find the love of your dog's life or your money back.</p>
+                        <p>
+                            Find the love of your dog's life or your money back.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -110,13 +133,17 @@
 
         <!-- Testimonials -->
 
-        <section id="testimonials">
-            <div id="testimonialsCarousel" class="carousel slide" data-ride="false">
+        <section class="colored-section" id="testimonials">
+            <div
+                id="testimonialsCarousel"
+                class="carousel slide"
+                data-ride="false"
+            >
                 <div class="carousel-inner">
                     <div class="carousel-item active container-fluid">
                         <h2 class="testimonial-text">
-                            I no longer have to sniff other dogs for love. I've found the hottest
-                            Corgi on TinDog. Woof.
+                            I no longer have to sniff other dogs for love. I've
+                            found the hottest Corgi on TinDog. Woof.
                         </h2>
                         <img
                             class="testimonials-image"
@@ -127,8 +154,8 @@
                     </div>
                     <div class="carousel-item container-fluid">
                         <h2 class="testimonial-text">
-                            My dog used to be so lonely, but with TinDog's help, they've found the
-                            love of their life. I think.
+                            My dog used to be so lonely, but with TinDog's help,
+                            they've found the love of their life. I think.
                         </h2>
                         <img
                             class="testimonials-image"
@@ -144,7 +171,10 @@
                     role="button"
                     data-slide="prev"
                 >
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span
+                        class="carousel-control-prev-icon"
+                        aria-hidden="true"
+                    ></span>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a
@@ -153,7 +183,10 @@
                     role="button"
                     data-slide="next"
                 >
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span
+                        class="carousel-control-next-icon"
+                        aria-hidden="true"
+                    ></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
@@ -161,16 +194,24 @@
 
         <!-- Press -->
 
-        <section id="press">
+        <section class="colored-section" id="press">
             <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
             <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
-            <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
-            <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
+            <img
+                class="press-logo"
+                src="images/bizinsider.png"
+                alt="biz-insider-logo"
+            />
+            <img
+                class="press-logo"
+                src="images/mashable.png"
+                alt="mashable-logo"
+            />
         </section>
 
         <!-- Pricing -->
 
-        <section id="pricing">
+        <section class="white-section" id="pricing">
             <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
             <p>Simple and affordable price plans for your and your dog.</p>
             <div class="row">
@@ -182,7 +223,10 @@
                             <p>5 Matches Per Day</p>
                             <p>10 Messages Per Day</p>
                             <p>Unlimited App Usage</p>
-                            <button class="btn btn-outline-dark btn-lg btn-block" type="button">
+                            <button
+                                class="btn btn-outline-dark btn-lg btn-block"
+                                type="button"
+                            >
                                 Sign Up
                             </button>
                         </div>
@@ -196,7 +240,10 @@
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
-                            <button class="btn btn-dark btn-lg btn-block" type="button">
+                            <button
+                                class="btn btn-dark btn-lg btn-block"
+                                type="button"
+                            >
                                 Sign Up
                             </button>
                         </div>
@@ -211,7 +258,10 @@
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
-                            <button class="btn btn-dark btn-lg btn-block" type="button">
+                            <button
+                                class="btn btn-dark btn-lg btn-block"
+                                type="button"
+                            >
                                 Sign Up
                             </button>
                         </div>
@@ -222,13 +272,21 @@
 
         <!-- Call to Action -->
 
-        <section id="cta">
+        <section class="colored-section" id="cta">
             <div class="container-fluid">
-                <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
-                <button class="download-button btn btn-lg btn-dark" type="button">
+                <h3 class="big-heading">
+                    Find the True Love of Your Dog's Life Today.
+                </h3>
+                <button
+                    class="download-button btn btn-lg btn-dark"
+                    type="button"
+                >
                     <i class="fa-brands fa-apple"></i> Download
                 </button>
-                <button class="download-button btn btn-lg btn-light" type="button">
+                <button
+                    class="download-button btn btn-lg btn-light"
+                    type="button"
+                >
                     <i class="fa-brands fa-google-play"></i> Download
                 </button>
             </div>
@@ -236,7 +294,7 @@
 
         <!-- Footer -->
 
-        <footer id="footer">
+        <footer class="white-section" id="footer">
             <div class="container-fluid">
                 <i class="fa-brands fa-twitter social-icon"></i>
                 <i class="fa-brands fa-facebook-f social-icon"></i>
